--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <ul class="nav" style="padding:28px 1px 6px;" >
      
       <li class="nav-item">
-        <a class="nav-link active" href="/index.html"style="font-size:18px;text-transform:uppercase;color:black;">Home</a>
+        <a class="nav-link active" href="index.html"style="font-size:18px;text-transform:uppercase;color:black;">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/layer2.html"style="font-size:18px;text-transform:uppercase ;color:black;">About us</a>
+        <a class="nav-link" href="layer2.html"style="font-size:18px;text-transform:uppercase ;color:black;">About us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/layer3.html" style="font-size:18px;text-transform:uppercase;color:black;">Contact us</a>
+        <a class="nav-link" href="layer3.html" style="font-size:18px;text-transform:uppercase;color:black;">Contact us</a>
       </li>
     </ul>
   </navbar>
